# cmdv

./: .gitignore  AGENTS.md  LICENCE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cursor/plans/: start-minimized-os-autostart.plan.md
.cursor/rules/: rust-secret-hygiene.mdc
.github/workflows/: release.yml
api/CmdvApi/: CmdvApi.csproj  CmdvApi.http  Program.cs  appsettings.json
api/CmdvApi.Tests/: AuthTests.cs  CmdvApi.Tests.csproj  PaddleTests.cs  TestHelpers.cs  TierTests.cs
api/CmdvApi/Data/: AppDbContext.cs
api/CmdvApi/Models/: AuthModels.cs  SyncStatus.cs  User.cs
api/CmdvApi/Services/: AuthService.cs  PaddleService.cs  R2Service.cs  TierService.cs
api/CmdvApi/Webhooks/: PaddleWebhookController.cs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/clipboard/: mod.rs  monitor.rs  source.rs
src-tauri/src/commands/: auth.rs  clipboard.rs  mod.rs  settings.rs  sync.rs  vault.rs
src-tauri/src/crypto/: encrypt.rs  hash.rs  keys.rs  mnemonic.rs  mod.rs
src-tauri/src/db/: entries.rs  mod.rs  schema.rs  settings.rs
src-tauri/src/image/: mod.rs
src-tauri/src/sensitive/: detect.rs  flags.rs  mod.rs
src-tauri/src/storage/: keychain.rs  mod.rs
src-tauri/src/sync/: blob.rs  client.rs  conflict.rs  mod.rs  queue.rs
src/components/: AppLock.tsx  ClipboardList.tsx  EntryCard.tsx  MnemonicDisplay.tsx  QrPairing.tsx  SearchBar.tsx  Settings.tsx  SetupWizard.tsx  SyncStatus.tsx
src/hooks/: useAuth.ts  useClipboard.ts  useSync.ts
