[package]
name = "cmdv"
version = "0.1.0"
description = "Zero-knowledge encrypted clipboard manager"
authors = ["cmdv"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "cmdv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl", "vtab"] }

# Crypto
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
argon2 = "0.5"
blake3 = "1"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# Mnemonic
bip39 = "2"

# OS keychain
keyring = { version = "3", features = ["sync-secret-service", "windows-native", "apple-native"] }

# Image processing
image = "0.25"
webp = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "native-tls"] }

# Clipboard
arboard = "3"

# QR code
qrcode = "0.14"

# Serialization
base64 = "0.22"
hex = "0.4"

# Platform memory locking
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Memory",
    "Win32_System_DataExchange",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
